2006-10-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkpagesetup.c: Rename Gtk::PageSetup#(top|bottom|left|right)_margin
	to Gtk::PageSetup#get_(top|bottom|left|right)_margin to follow
	Ruby-GNOME2 naming rules.
	* src/rbgtknotebook.c: Added Gtk::Notebook#(get|set)_tab_reorderable, 
	#(get|set)_tab_detachable, #set_window_creation_hook for GTK+-2.10.0.
	* src/rbgtklinkbutton.c: Added. 
	* sample/misc/linkbutton.rb: Added.
	* sample/misc/window.rb: Improved.
	* src/rbgtkentry.c: Added Gtk::Entry#layout_index_to_text_index, 
	#text_index_to_layout_index.
	* src/rbgtkdrag.c: Added Gtk::Drag.set_track_motion, get_track_motion for GTK+-2.10. 
	* src/rbgtkcombobox.c, rbgtkbutton.c, rbgtkfilechooserbutton.c, rbgtklabel.c,
	rbgtkmessagedialog.c: Add comments for GTK+-2.10. 

2006-10-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkclipboard.c: Added Gtk::Clipboard#request_rich_text,
	#wait_for_rich_text, #waitis_rich_text_avialable? for GTK+-2.10.
	* src/global.c: Removed(wasn't used).
	* gtk20/*, gtk22/*: Removed. Now Ruby/GTK2 doesn't support GTK+-2.2 or older. 
	* extconf.rb, src/init.c, rbgtk.h, rbgtktreerowreference.c, rbgtkclipboard.c: 
	ditto.
	* src/rbgtkcellrendereraccel.c: Added.
	* src/rbgtkcellrendererspin.c: Fixed copyright.

2006-10-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkassistant.c: Gtk::Assistant#set_current_page returns self.
	Added G_DEF_SETTERS.

2006-10-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreestore.c: Merge Gtk::TreeView#insert_with_values to #insert. 

2006-10-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkevent.c (ATTR_GOBJ): fixed a reference count related
	bug of Gdk::EventXXX#set_YYY. Bug #1548806.
	Reported by Markus Koller.

	* src/rbgdkpixbuf.c (pixbuf_s_from_drawable): fixed a memory leak.
	Reported by Andy Chantrill.

2006-10-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkselectiondata.c (gtkselectiondata_get_uris): fixed
	invalid memory free. Bug #1575545.
